--- a/insight-ui-komodo/public/views/index.html
+++ b/insight-ui-komodo/public/views/index.html
@@ -76,7 +76,7 @@
       </div>
 
       <div class="col-xs-12 col-md-4 col-gray">
-        <h2 translate>What is Komodo?</h2>
+        <h2 translate>What is Ciphscoin?</h2>
         <!--
         <p id="intro" translate><strong>Komodo</strong> aims at being the new standard for cryptocurrency security and anonymity.</p>
         <p class="subIntro" translate>Protected by ZCASH zero-knowledge proofs, users can make 100% untraceable transactions - secured by Bitcoin‘s petahash Proof of Work - due to Komodo’s new delayed Proof of Work (dPoW) consensus mechanism.</p>
@@ -84,23 +84,22 @@
         -->
         <p id="intro" translate>End-to-end Blockchain Solutions Provider empowering developers to build freely
           and participate in creating the largest open blockchain network.</p>
-        <p class="subIntro" translate><a href="https://komodoplatform.com" target="_blank"
-            title="Komodo Platform">Komodo Platform</a> strives to accelerate the adoption of blockchain technologies
-          around the globe and to lead the world in blockchain integration. All of the Komodo’s unique and cutting-edge
+        <p class="subIntro" translate><a href="https://ciphs.org.com" target="_blank"
+            title="Komodo Platform">Ciphscoin</a> are 100% PoW based Blockchain. Mainly built for fast & secured transaction, with additional layer of anonymity for private centric transaction. All Ciphscoin’s unique and cutting-edge
           technologies are open-source and available to everyone.</p>
-        <p class="subIntro">With a collaborative approach, rather than a competitive one, Komodo Platform is working to
+        <p class="subIntro"> Ciphscoin technologies revolutionize overall payment industry. Decentralize Protocol Network served and
           unite the blockchain industry, empower business leaders and entrepreneurs, and eliminate the need for
           centralized third parties in financial transactions.</p>
 
-        <p data-ng-if='currency.testnet'><strong>This explorer is currently showing the live Komodo network!</strong>
+        <p data-ng-if='currency.testnet'><strong>This explorer is currently showing the live Ciphscoin network!</strong>
         </p>
-        <a class="twitter-timeline" href="https://twitter.com/KomodoPlatform">Tweets by KomodoPlatform</a></p>
+        <a class="twitter-timeline" href="https://twitter.com/ciphscoin">Tweets by Ciphscoin</a></p>
         <div id="powered" class="row">
           <div class="powered-text">
             <small class="text-muted" translate>Powered by</small>
           </div>
           <!-- <a href="https://supernet.org/" target="_blank" class="supernet" title="SuperNET"></a> -->
-          <a href="https://komodoplatform.com" target="_blank" class="komodoplatform" title="Komodo Platform"></a>
+          <a href="http://ciphs.coin" target="_blank" class="komodoplatform" title="Ciphscoin"></a>
         </div>
       </div> <!-- END OF COL-3 -->
     </div>
