--- a/insight-ui-komodo/public/views/block.html
+++ b/insight-ui-komodo/public/views/block.html
@@ -19,8 +19,7 @@
                       class="glyphicon glyphicon-wrench"></span>&nbsp; Not
                     Notarized Yet!</small></span><span
                   data-ng-show="!block.lastNotarizedHeight">&middot;&nbsp;<small><span
-                      class="glyphicon glyphicon-wrench"></span>&nbsp; dPoW
-                    not Enabled <a href="https://komodoplatform.com/blockchain-security-service/"> More <span
+                      class="glyphicon glyphicon-stats"></span>&nbsp; Explorer Provided by Ciphs.org <a href="https://ciphs.org/"> More <span
                         class="glyphicon glyphicon-share"></span></a></small></span>
               </h3>
             </div>
@@ -53,8 +52,7 @@
       data-ng-show="!block.notarized && block.lastNotarizedHeight">&middot;&nbsp;<small><span
           class="glyphicon glyphicon-wrench"></span>&nbsp; Not Notarized
         Yet!</small></span><span data-ng-show="!block.lastNotarizedHeight">&middot;&nbsp;<small><span
-          class="glyphicon glyphicon-wrench"></span>&nbsp; dPoW not
-        Enabled <a href="https://komodoplatform.com/blockchain-security-service/"> Learn more <span
+          class="glyphicon glyphicon-stats"></span>&nbsp; Explorer Provided by Ciphs.org <a href="https://ciphs.org/"> Learn more <span
             class="glyphicon glyphicon-share"></span></a></small></span>
   </h1>
   <div class="text-muted" data-ng-if="!block.hash">
