--- a/insight-ui-komodo/public/views/index.html
+++ b/insight-ui-komodo/public/views/index.html
@@ -82,7 +82,7 @@
         -->
         <p id="intro" translate>End-to-end Blockchain Solutions Provider empowering developers to build freely
           and participate in creating the largest open blockchain network.</p>
-        <p class="subIntro" translate><a href="https://ciphs.org.com" target="_blank"
+        <p class="subIntro" translate><a href="http://ciphs.coin/" target="_blank"
             title="Komodo Platform">Ciphscoin</a> are 100% PoW based Blockchain. Mainly built for fast & secured transaction, with additional layer of anonymity for private centric transaction. All Ciphscoin’s unique and cutting-edge
           technologies are open-source and available to everyone.</p>
         <p class="subIntro"> Ciphscoin technologies revolutionize overall payment industry. Decentralize Protocol Network served and
@@ -97,7 +97,7 @@
             <small class="text-muted" translate>Powered by</small>
           </div>
           <!-- <a href="https://supernet.org/" target="_blank" class="supernet" title="SuperNET"></a> -->
-          <a href="http://ciphs.coin" target="_blank" class="komodoplatform" title="Ciphscoin"></a>
+          <a href="http://ciphs.coin/" target="_blank" class="komodoplatform" title="Ciphscoin"></a>
         </div>
       </div> <!-- END OF COL-3 -->
     </div>
