--- a/insight-ui-komodo/public/views/includes/connection.html
+++ b/insight-ui-komodo/public/views/includes/connection.html
@@ -1,6 +1,6 @@
 <div class="ad" data-ng-controller="AdController" data-ng-show="error || toDisplay">
-    <strong data-ng-show="error">Subscribe to Komodo Platform's Newsletter by <a
-        href="https://komodoplatform.com/newsletter">Clicking Here</a> </strong>
+    <strong data-ng-show="error">Join Ciphscoin Community on Discord! <a
+        href="https://discord.gg/A8d7fpka86">Clicking Here</a> </strong>
     <strong translate data-ng-show="toDisplay">{{toDisplay.string1}} <a
         href="{{toDisplay.link}}">{{toDisplay.anchorText}}
         <span class="glyphicon glyphicon-share"></span></a> {{toDisplay.string2}}</strong>
