--- a/insight-ui-komodo/public/views/includes/connection.html
+++ b/insight-ui-komodo/public/views/includes/connection.html
@@ -14,7 +14,7 @@
     <strong translate>Error! </strong>
 
     <p data-ng-show="!apiOnline" translate>
-      Can't connect to komodod to get live updates from the p2p network. (Tried connecting to komodod at
+      Can't connect to cipshd to get live updates from the p2p network. (Tried connecting to ciphsd at
       {{host}}:{{port}} and failed.)
     </p>
 
