--- a/insight-ui-komodo/public/views/status.html
+++ b/insight-ui-komodo/public/views/status.html
@@ -101,12 +101,12 @@
             <td class="text-right">{{info.protocolversion}}</td>
           </tr>
           <tr data-ng-show="info.notarized">
-            <td translate>dPoW</td>
+            <td translate>Protocol</td>
             <td class="text-right">Enabled</td>
           </tr>
           <tr data-ng-show="!info.notarized">
-            <td translate>dPoW</td>
-            <td class="text-right">Not Enabled</td>
+            <td translate>aPOW</td>
+            <td class="text-right">Enabled</td>
           </tr>
           <tr>
             <td translate>Blocks</td>
