--- a/insight-ui-komodo/public/views/includes/header.html
+++ b/insight-ui-komodo/public/views/includes/header.html
@@ -47,7 +47,7 @@
             <span data-ng-show="info.notarized">&middot;<br /><strong>{{ "Notarized" | translate }}</strong>&nbsp;
               {{ info.notarized }}</span>
             <span data-ng-show="!info.notarized">&middot;<br /><strong>{{
-                "dPoW not Enabled" | translate
+                "aPoW Enabled" | translate
               }}</strong></span>
           </div>
         </li>
