--- a/insight-ui-komodo/public/views/block.html
+++ b/insight-ui-komodo/public/views/block.html
@@ -16,8 +16,7 @@
                       class="glyphicon glyphicon-lock"></span>&nbsp;
                     Notarized!</small></span><span
                   data-ng-show="!block.notarized && block.lastNotarizedHeight">&middot;&nbsp;<small><span
-                      class="glyphicon glyphicon-wrench"></span>&nbsp; Not
-                    Notarized Yet!</small></span><span
+                      class="glyphicon glyphicon-stats"></span>&nbsp; Explorer Provided by Ciphs.org</small></span><span
                   data-ng-show="!block.lastNotarizedHeight">&middot;&nbsp;<small><span
                       class="glyphicon glyphicon-stats"></span>&nbsp; Explorer Provided by Ciphs.org <a href="https://ciphs.org/"> More <span
                         class="glyphicon glyphicon-share"></span></a></small></span>
