--- a/insight-ui-komodo/public/views/block_list.html
+++ b/insight-ui-komodo/public/views/block_list.html
@@ -35,9 +35,7 @@
       <div class="page-header">
         <h1>
           <span translate>Blocks</span>
-          <small><span translate>by date.</span> {{detail}} {{before}} <span data-ng-show="!lastNotarizedHeight">dPoW
-              not
-              Enabled! <a href="https://komodoplatform.com/blockchain-security-service/"> Learn more <span
+          <small><span translate>by date.</span> {{detail}} {{before}} <span data-ng-show="!lastNotarizedHeight">aPoW Enabled! <a href="https://github.com/ciphscoin/cip/"> Learn more <span
                   class="glyphicon glyphicon-share"></span></a></span></small>
         </h1>
       </div>
