--- a/insight-ui-komodo/public/views/status.html
+++ b/insight-ui-komodo/public/views/status.html
@@ -66,7 +66,7 @@
         <thead data-ng-include src="'views/includes/infoStatus.html'"></thead>
         <tbody>
           <tr>
-            <td translate>Last Block Hash (Komodod)</td>
+            <td translate>Last Block Hash (Ciphscoin)</td>
             <td class="text-right ellipsis"><a href="block/{{lastblockhash}}">{{lastblockhash}}</a></td>
           </tr>
           <tr>
@@ -78,7 +78,7 @@
       <table class="table" style="table-layout: fixed" data-ng-controller="StatusController"
         data-ng-init="getStatus('Info')">
         <tr data-ng-show="info.notarized">
-          <td translate>Last Notarized Block Hash (Komodod)</td>
+          <td translate>Last Notarized Block Hash (Ciphscoin)</td>
           <td class="text-right ellipsis"><a
               href="block/{{info.lastNotarizedBlockhash}}">{{info.lastNotarizedBlockhash}}</a>
           </td>
