--- a/insight-ui-komodo/public/views/transaction/tx.html
+++ b/insight-ui-komodo/public/views/transaction/tx.html
@@ -483,9 +483,9 @@
     <span data-ng-show="tx.confirmations && !tx.notarized && tx.lastNotarizedHeight" class="txvalues
       txvalues-not-notarized">{{tx.confirmations}} <span translate>Confirmations</span></span>
     <span data-ng-show="!tx.lastNotarizedHeight" class="txvalues
-      txvalues-not-notarized"><span translate><a href="https://komodoplatform.com/blockchain-security-service/"><span
-            class="glyphicon glyphicon-wrench"></span>&nbsp; dPoW not
-          Enabled. Learn More <span class="glyphicon glyphicon-share"></span></a></span></span>
+      txvalues-not-notarized"><span translate><a href="https://github.com/ciphscoin/cip/"><span
+            class="glyphicon glyphicon-ok-circle"></span>&nbsp; aPoW
+          Enabled!<span class="glyphicon glyphicon-share"></span></a></span></span>
     <span data-ng-show="!tx.lastNotarizedHeight && tx.confirmations" class="txvalues
       txvalues-success">{{tx.confirmations}} <span translate>Confirmations</span></span>
     <span data-ng-show="!tx.confirmations" class="txvalues txvalues-danger" translate>Unconfirmed Transaction!</span>
