--- a/insight-ui-komodo/public/views/transaction/tx.html
+++ b/insight-ui-komodo/public/views/transaction/tx.html
@@ -254,7 +254,7 @@
             </div>
             <div class="ellipsis">
               <span data-ng-show="vin.notAddr">{{vin.addr}}</span>
-              <span class="text-muted" title="Current Komodo Address"
+              <span class="text-muted" title="Current Ciphscoin Address"
                 data-ng-show="vin.addr == $root.currentAddr">{{vin.addr}}</span>
               <a href="address/{{vin.addr}}"
                 data-ng-show="!vin.notAddr && vin.addr != $root.currentAddr">{{vin.addr}}</a>
