--- a/insight-ui-komodo/public/views/index.html
+++ b/insight-ui-komodo/public/views/index.html
@@ -74,16 +74,15 @@
       </div>
 
       <div class="col-xs-12 col-md-4 col-gray">
-        <h2 translate>What is Ciphscoin?</h2>
+        <h2 translate>Block Explorer?</h2>
         <!--
         <p id="intro" translate><strong>Komodo</strong> aims at being the new standard for cryptocurrency security and anonymity.</p>
         <p class="subIntro" translate>Protected by ZCASH zero-knowledge proofs, users can make 100% untraceable transactions - secured by Bitcoin‘s petahash Proof of Work - due to Komodo’s new delayed Proof of Work (dPoW) consensus mechanism.</p>
         <p class="subIntro">Learn more on <a href="https://komodoplatform.com" target="_blank" title="Komodo Platform">KomodoPlatform.com</a></p>
         -->
-        <p id="intro" translate>End-to-end Blockchain Solutions Provider empowering developers to build freely
-          and participate in creating the largest open blockchain network.</p>
-        <p class="subIntro" translate><a href="http://ciphs.coin/" target="_blank"
-            title="Komodo Platform">Ciphscoin</a> are 100% PoW based Blockchain. Mainly built for fast & secured transaction, with additional layer of anonymity for private centric transaction. All Ciphscoin’s unique and cutting-edge
+        <p id="intro" translate>The terms are for blockchain transactions by Ciphscoin Protocol Network [CPN]. CPN is an immutable public ledger that based on p2p connection between 2 or more PC, without the needing for intermediatery to transfer values anywhere.</p>
+        <p class="subIntro" translate>CPN are dominated by a cryptocurrency coin known as <a href="http://ciphs.coin/" target="_blank"
+            title="Komodo Platform">Ciphscoin</a>, represent with symbolic CIPHS. Ciphscoin are mainly built for fast & secured transaction, with additional layer of anonymity for private centric transaction. All Ciphscoin’s unique and cutting-edge
           technologies are open-source and available to everyone.</p>
         <p class="subIntro"> Ciphscoin technologies revolutionize overall payment industry. Decentralize Protocol Network served and
           unite the blockchain industry, empower business leaders and entrepreneurs, and eliminate the need for
