--- a/insight-ui-komodo/public/views/index.html
+++ b/insight-ui-komodo/public/views/index.html
@@ -80,15 +80,15 @@
         <p class="subIntro" translate>Protected by ZCASH zero-knowledge proofs, users can make 100% untraceable transactions - secured by Bitcoin‘s petahash Proof of Work - due to Komodo’s new delayed Proof of Work (dPoW) consensus mechanism.</p>
         <p class="subIntro">Learn more on <a href="https://komodoplatform.com" target="_blank" title="Komodo Platform">KomodoPlatform.com</a></p>
         -->
-        <p id="intro" translate>The terms are for blockchain transactions by Ciphscoin Protocol Network [CPN]. CPN is an immutable public ledger that based on p2p connection between 2 or more PC, without the needing for intermediatery to transfer values anywhere.</p>
-        <p class="subIntro" translate>CPN are dominated by a cryptocurrency coin known as <a href="http://ciphs.coin/" target="_blank"
-            title="Komodo Platform">Ciphscoin</a>, represent with symbolic CIPHS. Ciphscoin are mainly built for fast & secured transaction, with additional layer of anonymity for private centric transaction. All Ciphscoin’s unique and cutting-edge
-          technologies are open-source and available to everyone.</p>
-        <p class="subIntro"> Ciphscoin technologies revolutionize overall payment industry. Decentralize Protocol Network served and
-          unite the blockchain industry, empower business leaders and entrepreneurs, and eliminate the need for
-          centralized third parties in financial transactions.</p>
+        <p id="intro" translate>The terms are for blockchain transactions by Ciphscoin Protocol Network [CPN]. CPN is an immutable public ledger software that create a decentralize network with p2p protocol, with the value of Ciphscoin as digital currency aka Cryptocurrency.</p>
+        <p class="subIntro" translate>Ciphscoin's<a href="http://ciphs.coin/" target="_blank"
+            title="Komodo Platform">[CIPHS]</a> are unique and cutting-edge
+          technologies with open-source software available to everyone. CPN enpowering blockchain industry for business leaders and entrepreneurs to eliminate the need for centralized third parties in financial transactions. Adittionally, CPN are build with Tokenized applications accessible by everyone. Launching an ICO or IPO for world adoption is never been this easy> These explorer are provided by Ciphs.org, a Ciphscoin Developmet Foundation. Below are Ciphscoin related url:</p>
+        <p class="subIntro" translate>Website: <a href="http://ciphs.coin/" target="_blank">Ciphs.coin</a></p>
+        <p class="subIntro" translate>Community: <a href="https://discord.gg/rXzqmxNZ/" target="_blank">ciphscoin/discord</a></p>
+        <p class="subIntro" translate>Development: <a href="http://github.com/ciphscoin/" target="_blank">ciphscoin/github</a></p>
 
-        <p data-ng-if='currency.testnet'><strong>This explorer is currently showing the live Ciphscoin network!</strong>
+        <p data-ng-if='currency.testnet'><strong>This explorer is currently showing the live Ciphscoin network! by Ciphs.org</strong>
         </p>
         <a class="twitter-timeline" href="https://twitter.com/ciphscoin">Tweets by Ciphscoin</a></p>
         <div id="powered" class="row">
