--- a/insight-ui-komodo/public/views/index.html
+++ b/insight-ui-komodo/public/views/index.html
@@ -83,10 +83,14 @@
         <p id="intro" translate>The terms are for blockchain transactions by Ciphscoin Protocol Network [CPN]. CPN is an immutable public ledger software that create a decentralize network with p2p protocol, with the value of Ciphscoin as digital currency aka Cryptocurrency.</p>
         <p class="subIntro" translate><a href="http://ciphs.coin/" target="_blank"
             title="Komodo Platform">Ciphscoin Protocol Network</a> are unique and cutting-edge
-          technologies with open-source software available to everyone. CPN enpowering blockchain industry for business leaders and entrepreneurs to eliminate the need for centralized third parties in financial transactions. Additionally, CPN are build with Tokenized applications that is accessible by everyone. Launching an ICO or IPO for world adoption are simple and cost effecient. Welcome to Ciphscoin, a Cryptocurrency for the World. These website, CORG block explorer are provided by Ciphs.org, a Ciphscoin Development Foundation. Below are Ciphscoin related info:</p>
-        <p class="subIntro" translate>Website: <a href="http://ciphs.coin/" target="_blank">Ciphs.coin</a></p>
+          technologies with open-source software available to everyone. CPN enpowering blockchain industry for business leaders and entrepreneurs to eliminate the need for centralized third parties in financial transactions. Additionally, CPN are build with Tokenized applications that is accessible by everyone. Launching an ICO or IPO for world adoption are simple and cost effecient. Welcome to Ciphscoin, a Cryptocurrency for the World.</p>
+        <p class="subIntro" translate>Website: <a href="http://ciphs.coin/" target="_blank">Ciphs.coin</a> DNS error? It's a decentralize website, download extension below.</p>
+        <p class="subIntro" translate>Extension: <a href="http://github.com/ciphscoin/" target="_blank">ciphscoin/webextension</a></p>
         <p class="subIntro" translate>Community: <a href="https://discord.gg/rXzqmxNZ/" target="_blank">ciphscoin/discord</a></p>
-        <p class="subIntro" translate>Development: <a href="http://github.com/ciphscoin/" target="_blank">ciphscoin/github</a></p>
+        <p class="subIntro" translate>Development: <a href="http://github.com/ciphscoin/" target="_blank">ciphscoin/github</a></p>       
+        <p class="subIntro" translate>Provider: <a href="https://ciphs.org/" target="_blank">CORG Block Explorer</a> is a provider for Ciphscoin Development Foundation.</p>
+        
+
 
         <p data-ng-if='currency.testnet'><strong>This explorer is currently showing the live Ciphscoin network! by Ciphs.org</strong>
         </p>
