--- a/insight-ui-komodo/public/views/index.html
+++ b/insight-ui-komodo/public/views/index.html
@@ -84,11 +84,11 @@
         <p class="subIntro" translate><a href="http://ciphs.coin/" target="_blank"
             title="Komodo Platform">Ciphscoin Protocol Network</a> are unique and cutting-edge
           technologies with open-source software available to everyone. CPN enpowering blockchain industry for business leaders and entrepreneurs to eliminate the need for centralized third parties in financial transactions. Additionally, CPN are build with Tokenized applications that is accessible by everyone. Launching an ICO or IPO for world adoption are simple and cost effecient. Welcome to Ciphscoin, a Cryptocurrency for the World.</p>
-        <p class="subIntro" translate>Website: <a href="http://ciphs.coin/" target="_blank">Ciphs.coin</a> DNS error? It's a decentralize website, download extension below.</p>
+        <p class="subIntro" translate>Website: <a href="http://ciphs.coin/" target="_blank">Ciphs.coin</a> DNS error? It's a decentralize domain, download extension below.</p>
         <p class="subIntro" translate>Extension: <a href="http://github.com/ciphscoin/" target="_blank">ciphscoin/webextension</a></p>
         <p class="subIntro" translate>Community: <a href="https://discord.gg/rXzqmxNZ/" target="_blank">ciphscoin/discord</a></p>
         <p class="subIntro" translate>Development: <a href="http://github.com/ciphscoin/" target="_blank">ciphscoin/github</a></p>       
-        <p class="subIntro" translate>Provider: <a href="https://ciphs.org/" target="_blank">CORG Block Explorer</a> is a provider for Ciphscoin Development Foundation.</p>
+        <p class="subIntro" translate>Explorer by: <a href="https://ciphs.org/" target="_blank">CORG</a>ciphs.org/website</p>
         
 
 
