--- a/insight-ui-komodo/public/views/index.html
+++ b/insight-ui-komodo/public/views/index.html
@@ -80,15 +80,15 @@
         <p class="subIntro" translate>Protected by ZCASH zero-knowledge proofs, users can make 100% untraceable transactions - secured by Bitcoin‘s petahash Proof of Work - due to Komodo’s new delayed Proof of Work (dPoW) consensus mechanism.</p>
         <p class="subIntro">Learn more on <a href="https://komodoplatform.com" target="_blank" title="Komodo Platform">KomodoPlatform.com</a></p>
         -->
-        <p id="intro" translate>The terms are for blockchain transactions by Ciphscoin Protocol Network [CPN]. CPN is an immutable public ledger software that create a decentralize network with p2p protocol, with the value of Ciphscoin as digital currency aka Cryptocurrency.</p>
+        <p id="intro" translate>These are CIPHS transaction within Ciphscoin Protocol Network [CPN]. CPN is an immutable public ledger software that create a decentralize blockchain network by p2p connection and PoW protocol as consensus for changes within the data using Ciphscoin [CIPHS] as digital currency with the value of transfer.</p>
         <p class="subIntro" translate><a href="http://ciphs.coin/" target="_blank"
             title="Komodo Platform">Ciphscoin Protocol Network</a> are unique and cutting-edge
-          technologies with open-source software available to everyone. CPN enpowering blockchain industry for business leaders and entrepreneurs to eliminate the need for centralized third parties in financial transactions. Additionally, CPN are build with Tokenized applications that is accessible by everyone. Launching an ICO or IPO for world adoption are simple and cost effecient. Welcome to Ciphscoin, a Cryptocurrency for the World.</p>
+          technologies are open-source software and available to everyone. CPN enpowering blockchain industry for business leaders and entrepreneurs to eliminate the need for centralized third parties in financial transactions. Additionally, CPN are platform for issuance digital Tokenized Asset that is accessible using Ciphscoin, launching an ICO/IPO/DAO for project with less cost and timely efficient. Ciphscoin is an ongoing development cryptocurrency project, use at your own risk.</p>
         <p class="subIntro" translate>Website: <a href="http://ciphs.coin/" target="_blank">Ciphs.coin</a> DNS error? It's a decentralize domain, download extension below.</p>
         <p class="subIntro" translate>Extension: <a href="http://github.com/ciphscoin/" target="_blank">ciphscoin/webextension</a></p>
         <p class="subIntro" translate>Community: <a href="https://discord.gg/rXzqmxNZ/" target="_blank">ciphscoin/discord</a></p>
-        <p class="subIntro" translate>Development: <a href="http://github.com/ciphscoin/" target="_blank">ciphscoin/github</a></p>       
-        <p class="subIntro" translate>Explorer by: <a href="https://ciphs.org/" target="_blank">CORG</a>ciphs.org/website</p>
+        <p class="subIntro" translate>Development: <a href="https://github.com/ciphscoin/" target="_blank">ciphscoin/github</a></p>       
+        <p class="subIntro" translate>Explorer by: <a href="https://ciphs.org/" target="_blank">CORG/website</a></p>
         
 
 
